--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -7,6 +7,18 @@
 <!----   Here i will add 2 components fo action center and create event-->
 <body>
     <!--Here are 2 buttons for Action Center and new event creation-->
-    <button class="button">Action Center</button>
-    <button class="button">Create New Event</button>
+
+    <div class="field is-grouped">
+        <p class="control">
+          <button class="button is-link" (click)="goToActionCenter()">
+            Action Center
+          </button>
+        </p>
+
+        <p class="control">
+          <button class="button is-danger">
+            Create New Event
+          </button>
+        </p>
+      </div>
 </body>
