New-Event Form was created, need to connect to db and google api

--- a/front-end/src/app/footer/footer.component.html
+++ b/front-end/src/app/footer/footer.component.html
@@ -3,5 +3,6 @@
       <p>
         <strong>Welcome to Home Page</strong>
       </p>
+      <p>Here you can navigate your perfect event<p>
     </div>
   </footer>
