--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -10,13 +10,13 @@
 
     <div class="field is-grouped">
         <p class="control">
-          <button class="button is-link" (click)="goToActionCenter()">
+          <button class="button is-link" (click)="goToActionCenter()" id="button1">
             Action Center
           </button>
         </p>
 
         <p class="control">
-          <button class="button is-danger">
+          <button class="button is-danger" (click)="goToNewEvent()" id="button2">
             Create New Event
           </button>
         </p>
