--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -4,7 +4,6 @@
 <app-header></app-header>
 <!--Footer insertion -->
 <app-footer></app-footer>
-<!----   Here i will add 2 components fo action center and create event-->
 <body>
     <!--Here are 2 buttons for Action Center and new event creation-->
 
@@ -22,3 +21,4 @@
         </p>
       </div>
 </body>
+<!--Add icons to twitter and facebook-->
