Creation of Event Schema is completed- still need to connect it to front

--- a/front-end/src/app/event/new-event/new-event.component.html
+++ b/front-end/src/app/event/new-event/new-event.component.html
@@ -1,4 +1,6 @@
+<!--Header of the New-Event page-->
 <app-header></app-header>
+<!--Here i put the form -->
 <body>
   <div class="container" id="mybox">
     <div class="notification is-primary">
@@ -64,6 +66,7 @@
       </div>
     </div>
   </div>
+
   
   <div class="field is-horizontal">
     <div class="field-label">
@@ -81,4 +84,6 @@
   </div>
 </div>
 </div>
+
 </body>
+
