--- a/front-end/src/app/footer/footer.component.html
+++ b/front-end/src/app/footer/footer.component.html
@@ -4,5 +4,14 @@
         <strong>Welcome to Home Page</strong>
       </p>
       <p>Here you can navigate your perfect event<p>
+
+        <div class="modal">
+          <div class="modal-background"></div>
+          <div class="modal-content">
+            <!-- Any other Bulma elements you want -->
+          </div>
+          <button class="modal-close is-large" aria-label="close"></button>
+        </div>
+
     </div>
   </footer>
