Form looks like ****, next=> google api and the modal build

--- a/front-end/src/app/event/new-event/new-event.component.css
+++ b/front-end/src/app/event/new-event/new-event.component.css
@@ -13,3 +13,13 @@ body{
     padding: 10px;
     margin: auto;
   }
+
+
+  label{
+     position: relative;
+     max-width: 120px;
+  }
+  button{
+      margin-left: 150px;
+      
+  }
