Chip material added, still working on event form

--- a/front-end/src/app/event/new-event/new-event.component.css
+++ b/front-end/src/app/event/new-event/new-event.component.css
@@ -17,9 +17,13 @@ body{
 
   label{
      position: relative;
-     max-width: 120px;
+     margin-left: auto;
   }
   button{
-      margin-left: 150px;
+      margin-left: 130px;
       
+  }
+
+  .example-chip-list {
+    width: 100%;
   }
