--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -1,24 +1,33 @@
-
-
 <!--   The Heder of the home page -->
 <app-header></app-header>
-<!--Footer insertion -->
-<app-footer></app-footer>
-<body>
-    <!--Here are 2 buttons for Action Center and new event creation-->
+<!--Footer insertion  to fix-->
 
-    <div class="field is-grouped">
-        <p class="control">
-          <button class="button is-link" (click)="goToActionCenter()" id="button1">
-            Action Center
-          </button>
-        </p>
+<header>
+  <div class="overlay">
+  </div>
+  <video playsinline="playsinline" autoplay="autoplay" muted="muted" loop="loop">
+    <source src="https://storage.googleapis.com/coverr-main/mp4/Mt_Baker.mp4" type="video/mp4">
+  </video>
+  <div class="container h-100">
+    <div class="d-flex h-100 text-center align-items-center">
+      <div class="w-100 text-white">
+        <div class="field is-grouped">
 
-        <p class="control">
-          <button class="button is-danger" (click)="goToNewEvent()" id="button2">
-            Create New Event
-          </button>
-        </p>
+          <p class="control">
+            <button class="button is-link" (click)="goToActionCenter()" id="button1">
+              Action Center
+            </button>
+          </p>
+
+          <p class="control">
+            <button class="button is-danger" (click)="goToNewEvent()" id="button2">
+              Create New Event
+            </button>
+          </p>
+
+        </div>
       </div>
-</body>
-<!--Add icons to twitter and facebook-->
+    </div>
+  </div>
+</header>
+<app-footer></app-footer>
