--- a/front-end/src/app/header/header.component.html
+++ b/front-end/src/app/header/header.component.html
@@ -1,9 +1,8 @@
-<nav class="navbar is-success" role="navigation" aria-label="dropdown navigation">
+<nav class="navbar is-primary" role="navigation" aria-label="dropdown navigation">
   <a class="navbar-item">
     <!--Here i will create link to home page -->
     <img src="/assets/img/logo-removebg-preview.png" width="112" height="28">
   </a>
-
   <div class="navbar-item has-dropdown">
   </div>
 </nav>
