--- a/front-end/src/app/event/new-event/new-event.component.html
+++ b/front-end/src/app/event/new-event/new-event.component.html
@@ -32,7 +32,12 @@
           <input type="text" #password="ngModel" [(ngModel)]="newEventService.selectedEvent.formID" name="formID" placeholder="Form ID"
           minlength="4" required [ngClass]="{'invalid-textbox' :newEventForm.submitted}">
           <div class="buttons">
-            <button class="button is-link">Select Google Form</button>
+
+            <button class="button is-link" (click)="selectItem()" (onClose)="showModal=false">Select Google Form</button>
+            <p *ngIf="selected">Selected: {{ selected }}</p>
+            <app-form-modal *ngIf="showModal" (onClose)="selectedItem($event)"></app-form-modal>
+           
+
           </div>
           <!--Event Message Input-->
           <label class="label">Message</label>
