--- a/front-end/src/app/event/new-event/new-event.component.html
+++ b/front-end/src/app/event/new-event/new-event.component.html
@@ -4,7 +4,8 @@
     <div class="field is-horizontal" id="formContent">
       <div class="field-body">
         <!--Event Form Creation-->
-        <form #newEventForm="ngForm" (ngSubmit)="onSubmit(newEventForm)">
+        <!--(ngSubmit)="onSubmit(newEventForm)" creates a bug of sending -->
+        <form #newEventForm="ngForm" >
           <!--Event Name Input-->
           <label class="label"> Event Name</label>
           <input type="text" #name="ngModel" [(ngModel)]="newEventService.selectedEvent.name" name="name" placeholder="Event Name"
@@ -28,12 +29,13 @@
             </mat-chip-list>
           </mat-form-field>
           <!--Event Form Id Input-->
+
             <label class="label">Form ID</label>
           <input type="text" #password="ngModel" [(ngModel)]="newEventService.selectedEvent.formID" name="formID" placeholder="Form ID"
           minlength="4" required [ngClass]="{'invalid-textbox' :newEventForm.submitted}">
           <div class="buttons">
 
-            <button class="button is-link" (click)="selectItem()" (onClose)="showModal=false">Select Google Form</button>
+            <button class="button is-link" (click)="selectItem()" (onClose)="showModal=false">Select Event Form</button>
             <p *ngIf="selected">Selected: {{ selected }}</p>
             <app-form-modal *ngIf="showModal" (onClose)="selectedItem($event)"></app-form-modal>
            
