--- a/front-end/src/app/event/new-event/form-modal/form-modal.component.html
+++ b/front-end/src/app/event/new-event/form-modal/form-modal.component.html
@@ -10,10 +10,18 @@
         <div class="select">
           <select name="selected" [(ngModel)]="selected">
             <option value="">Select a form</option>
-            <option value="simple form">
-              <label>simple form</label>
+            <option value="basic-option">
+              <label>Basic Form</label>
             </option>
-            <option value="Item 2">birth-day form</option>
+            <option value="birth-day-option">
+              <label>Birth-Day Form</label>
+            </option>
+            <option value="organize-form">
+              <label>Organize Trip Form</label>
+            </option>
+            <option value="Picnic-Form">
+              <label>Picnic Form</label>
+            </option>
           </select>
         </div>
   
