--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -13,17 +13,17 @@
       <div class="w-100 text-white">
         <div class="field is-grouped">
 
-          <p class="control">
+          <div id="action-center-container" class="control">
             <button class="button is-link" (click)="goToActionCenter()" id="button1">
               Action Center
             </button>
-          </p>
+          </div>
 
-          <p class="control">
+          <div id="new-event-container" class="control">
             <button class="button is-danger" (click)="goToNewEvent()" id="button2">
               Create New Event
             </button>
-          </p>
+          </div>
 
         </div>
       </div>
