Need to fix bd form-json, and submition

--- a/front-end/src/app/event/new-event/forms/base-form/base-form.component.html
+++ b/front-end/src/app/event/new-event/forms/base-form/base-form.component.html
@@ -1,29 +1,9 @@
-<div ngModelGroup="{{modelGroupName}}">
-
-    <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
-        <mat-form-field fxFlex="100">
-            <input matInput placeholder="Street" name="street" ngModel i18n-placeholder required>
-        </mat-form-field>
-    </div>
-
-    <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
-        <mat-form-field fxFlex="20">
-            <input matInput placeholder="ZIP Code" name="zip" ngModel i18n-placeholder required>
-        </mat-form-field>
-        <mat-form-field fxFlex="45">
-            <input matInput placeholder="City" name="city" ngModel i18n-placeholder required>
-        </mat-form-field>
-        <mat-form-field fxFlex="30">
-            <input matInput placeholder="Country" name="country" ngModel i18n-placeholder>
-        </mat-form-field>
-    </div>
-</div>
 
 <div ngModelGroup="{{modelGroupName}}">
 
     <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
         <mat-form-field fxFlex="45">
-            <input matInput placeholder="First Name" name="firstName" ngModel i18n-placeholder>
+            <input matInput placeholder="First Name" name="firstName" ngModel i18n-placeholder required>
         </mat-form-field>
         <mat-form-field fxFlex="45">
             <input matInput placeholder="Last Name" name="lastName" required ngModel i18n-placeholder>
@@ -52,25 +32,33 @@
     <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
 
         <mat-form-field fxFlex="50">
-            <input matInput placeholder="Phone Number 1" name="phone1" ngModel i18n-placeholder>
+            <input matInput placeholder="Phone Number 1" name="phone1" ngModel i18n-placeholder required>
         </mat-form-field>
 
         <mat-form-field fxFlex="50">
             <input matInput placeholder="Phone Number 2" name="phone2" ngModel i18n-placeholder>
         </mat-form-field>
 
-        <mat-form-field fxFlex="50">
-            <input matInput placeholder="Phone Number 3" name="phone3" ngModel i18n-placeholder>
-        </mat-form-field>
-
     </div>
 
     <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
         <mat-form-field fxFlex="50">
-            <input matInput placeholder="E-Mail Address 1" name="eMail1" ngModel i18n-placeholder>
+            <input matInput placeholder="E-Mail Address 1" name="eMail1" ngModel i18n-placeholder required>
         </mat-form-field>
         <mat-form-field fxFlex="50">
             <input matInput placeholder="E-Mail Address 2" name="eMail2" ngModel i18n-placeholder>
         </mat-form-field>
     </div> 
+</div>
+<div ngModelGroup="{{modelGroupName}}">
+
+
+    <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
+        <mat-form-field fxFlex="30">
+            <input matInput placeholder="City" name="city" ngModel i18n-placeholder required>
+        </mat-form-field>
+        <mat-form-field fxFlex="30">
+            <input matInput placeholder="Country" name="country" ngModel i18n-placeholder>
+        </mat-form-field>
+    </div>
 </div>
