--- a/front-end/src/app/event/new-event/forms/birthday-form/birthday-form.component.html
+++ b/front-end/src/app/event/new-event/forms/birthday-form/birthday-form.component.html
@@ -1,76 +1,50 @@
+
+
 <div ngModelGroup="{{modelGroupName}}">
 
   <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
-      <mat-form-field fxFlex="100">
-          <input matInput placeholder="Street" name="street" ngModel i18n-placeholder required>
+      <mat-form-field fxFlex="45">
+          <input matInput placeholder="How much mode you willing to invest" name="money" ngModel i18n-placeholder required>
       </mat-form-field>
   </div>
 
-  <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
-      <mat-form-field fxFlex="20">
-          <input matInput placeholder="ZIP Code" name="zip" ngModel i18n-placeholder required>
+</div>
+
+<div ngModelGroup="{{modelGroupName}}">
+
+      <!--Prefer Locations-->
+      <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="30px">
+        <mat-label ngModel i18n>Prefer Locations:</mat-label>
+        <mat-checkbox value="Open Location" i18n>Open Location</mat-checkbox>
+        <mat-checkbox value="Close Location" i18n>Close Location</mat-checkbox>
+        <mat-checkbox value="Don't Mind" i18n>Don't Mind</mat-checkbox>
+      </div>
+</div>
+
+
+<div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
+
+    <mat-form-field fxFlex="20" ngModel i18n-placeholder required>
+        <mat-label i18n>Preferred Area</mat-label >
+            <mat-select required>
+                <mat-option value="Center Area" i18n>Center Area</mat-option>
+                <mat-option value="South Area" i18n>South Area</mat-option>
+                <mat-option value="North Area" i18n>North Area</mat-option>
+        </mat-select>
       </mat-form-field>
-      <mat-form-field fxFlex="45">
-          <input matInput placeholder="City" name="city" ngModel i18n-placeholder required>
-      </mat-form-field>
-      <mat-form-field fxFlex="30">
-          <input matInput placeholder="Country" name="country" ngModel i18n-placeholder>
-      </mat-form-field>
-  </div>
 </div>
 
 <div ngModelGroup="{{modelGroupName}}">
 
   <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
-      <mat-form-field fxFlex="45">
-          <input matInput placeholder="First Name" name="firstName" ngModel i18n-placeholder>
-      </mat-form-field>
-      <mat-form-field fxFlex="45">
-          <input matInput placeholder="Last Name" name="lastName" required ngModel i18n-placeholder>
-      </mat-form-field>
-  </div>
-
-  <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
 
       <mat-form-field fxFlex="20">
-          <mat-label i18n>Gender</mat-label>
-              <mat-select required>
-                  <mat-option value="Female" i18n>Female</mat-option>
-                  <mat-option value="Male" i18n>Male</mat-option>
-            <mat-option value="Non-Binary" i18n>Non-Binary</mat-option>
-          </mat-select>
-        </mat-form-field>
-
-      <mat-form-field fxFlex="20">
-          <input matInput [matDatepicker]="picker" placeholder="Birth Date" name="birthDate" ngModel i18n-placeholder required>
+          <input matInput [matDatepicker]="picker" placeholder="Prefer Date" name="preferDate" ngModel i18n-placeholder required>
           <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
           <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
 
   </div>
 
-  <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
-
-      <mat-form-field fxFlex="50">
-          <input matInput placeholder="Phone Number 1" name="phone1" ngModel i18n-placeholder>
-      </mat-form-field>
-
-      <mat-form-field fxFlex="50">
-          <input matInput placeholder="Phone Number 2" name="phone2" ngModel i18n-placeholder>
-      </mat-form-field>
-
-      <mat-form-field fxFlex="50">
-          <input matInput placeholder="Phone Number 3" name="phone3" ngModel i18n-placeholder>
-      </mat-form-field>
-
-  </div>
-
-  <div fxLayout="row" fxLayout.lt-sm="column" fxLayoutGap="20px">
-      <mat-form-field fxFlex="50">
-          <input matInput placeholder="E-Mail Address 1" name="eMail1" ngModel i18n-placeholder>
-      </mat-form-field>
-      <mat-form-field fxFlex="50">
-          <input matInput placeholder="E-Mail Address 2" name="eMail2" ngModel i18n-placeholder>
-      </mat-form-field>
-  </div> 
+ 
 </div>
