fixed header rout to home

--- a/front-end/src/app/header/header.component.html
+++ b/front-end/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar is-primary" role="navigation" aria-label="dropdown navigation">
   <a class="navbar-item">
     <!--Here i will create link to home page -->
-    <img src="/assets/img/logo-removebg-preview.png" width="112" height="28">
+    <img src="/assets/img/logo-removebg-preview.png" width="112" height="28" (click)="goToHome()">
   </a>
   <div class="navbar-item has-dropdown">
   </div>
