created reco' modal - need to add functionality

--- a/front-end/src/app/home/home/home.component.html
+++ b/front-end/src/app/home/home/home.component.html
@@ -1,7 +1,7 @@
 <!--   The Heder of the home page -->
 <app-header></app-header>
 <!--Footer insertion  to fix-->
-
+<app-recommendation-popup></app-recommendation-popup>
 <header>
   <div class="overlay">
   </div>
