created table in recomendation popup

--- a/front-end/src/app/recommendation-popup/recommendation-popup/recommendation-popup.component.html
+++ b/front-end/src/app/recommendation-popup/recommendation-popup/recommendation-popup.component.html
@@ -2,15 +2,69 @@
     <div class="modal-background"></div>
     <div class="modal-card">
       <header class="modal-card-head">
-        <p class="modal-card-title">Modal title</p>
+        <p class="modal-card-title">Welcome {{user_name}}! Please fill this short survey </p>
         <button class="delete" aria-label="close"></button>
       </header>
       <section class="modal-card-body">
         <!-- Content ... -->
+        <table class="table is-striped">
+          <thead>
+            <tr>
+              <th>Event</th>
+              <th>1(less liked)</th>
+              <th>2</th>
+              <th>3</th>
+              <th>4</th>
+              <th>5(most liked)</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+                 <th>Birthday</th>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+          </tbody>
+          <tbody>
+            <tr>
+                 <th>Holiday</th>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+          </tbody>
+          <tbody>
+            <tr>
+                 <th>Picnic near the river</th>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+          </tbody>
+          <tbody>
+            <tr>
+                 <th>Organize Trip to the north</th>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+              <td>0</td>
+            </tr>
+          </tbody>
+          </table>
+
       </section>
       <footer class="modal-card-foot">
-        <button class="button is-success">Save changes</button>
-        <button class="button">Cancel</button>
+        <button class="button is-success">Send Survey</button>
+        <!-- <button class="button">Go Back to Sign-In</button>
+        <button class="button">Contact Us</button> -->
       </footer>
     </div>
   </div>
